# -

./: .env.example  AGENTS.md  DEPLOY_LOCAL.md  QUICKSTART.md  README.md  pyproject.toml
app/: config.py  constants.py  logging.py  main.py
app/auth/: export_cookies.py  login.py  state.py
app/clients/: bili_api.py  http.py  wbi.py  ytdlp_client.py
app/db/: crud_download.py  crud_runlog.py  download_status.py  init_db.py  models.py  repo.py  session.py
app/schemas/: app_config.py  comment.py  dynamic.py  video.py
app/services/: batch_sync.py  download_videos.py  enqueue_video_download.py  export_reports.py  healthcheck.py  run_download_queue.py  scheduler_tasks.py  sync_comment_replies.py  sync_comments.py  sync_creator_feed.py  sync_creator_videos.py  sync_dynamics.py  sync_videos.py
app/utils/: backoff.py  bvid.py  checkpoint.py  cookies.py  csv_export.py  filelock.py  json_export.py  paths.py  retry.py  sanitize.py  time.py
app/web/: __init__.py  app_factory.py  deps.py
app/web/routers/: __init__.py  api_dashboard.py  api_downloads.py  api_health.py  api_reports.py  api_sync.py  page_creators.py  page_dashboard.py  page_downloads.py  page_dynamics.py  page_videos.py
app/web/schemas/: __init__.py  api_common.py  api_download.py
app/web/services/: __init__.py  dashboard_service.py  query_service.py  (+1 more)
app/workers/: download_worker.py
config/: app.yaml  creators.yaml
scripts/: acceptance_smoke.ps1  healthcheck.ps1  init_local.ps1  register_task.ps1  run_all_in_one.ps1  run_batch_sync.ps1  run_export.ps1  run_scheduler_loop.ps1  run_stack.ps1  run_sync_all.ps1  run_web.ps1  run_worker_loop.ps1  stop_stack.ps1
(+8 files in other folders)
